# Stom

./: .gitignore  NOTICE  pyproject.toml
.github/scripts/: smoke_engine_pack.py
.github/workflows/: build-engine-pack.yml  build-windows.yml  smoke-windows-install.yml
docs/superpowers/: CONTINUE-HERE.md
packaging/: README.md  engine_launch.py  launch.py  stom-client.iss  stom-client.spec  stom-engine.spec
scripts/: create_account.py  download_tf2_weights.py  download_weights.py  reap_stale_jobs.py
src/stomclient/: README.md  __init__.py  __main__.py  app_controller.py  cloud_client.py  config.py  coords.py  engine_pack.py  local_engine.py  measurement.py  serialization.py  slice_renderer.py  updates.py
src/stomcore/: __init__.py  cli.py  dicom_loader.py  geometry.py  mask.py  mask_io.py  nifti_io.py  sitk_interop.py  stl_export.py  volume.py
tests/: conftest.py  test_api_errors.py  test_api_health.py  test_api_jobs.py  test_api_masks.py  test_api_studies.py  test_app_controller.py  test_auth.py  test_cli.py  test_client_config.py  test_client_smoke.py  test_client_ui_smoke.py  test_cloud_client.py  test_config.py  test_coords.py  test_create_account_script.py  test_db_models.py  test_dicom_loader.py  test_engine.py  test_engine_cli.py  test_engine_pack.py  test_geometry.py  test_integration_e2e.py  test_labels.py  test_local_engine.py  test_lowmem.py  test_mask.py  test_mask_io.py  test_measurement.py  test_nifti_io.py  test_queue_rq.py  test_runner_denoise.py  test_runner_harmonize.py  test_runner_progress.py  test_runner_real.py  test_runner_tta.py  test_serialization.py  test_sitk_interop.py  test_slice_renderer.py  test_smoke.py  (+9 more)
(+44 files in other folders)
