[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stomcore"
version = "0.4.0"
description = "Core data layer for CBCT segmentation (DICOM/NIfTI, Volume, masks)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "SimpleITK>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "pytest-qt>=4.4", "tomli-w>=1.0"]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "rq>=1.16",
    "redis>=5.0",
    "fakeredis>=2.21",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]
nnunet = ["nnunetv2>=2.5"]
client = ["PySide6>=6.6", "httpx>=0.27", "tomli-w>=1.0"]

[project.scripts]
stom-dicom2nifti = "stomcore.cli:main"
stom-client = "stomclient.__main__:main"
stom-engine = "stomengine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: tests that need the real model/weights (skipped by default unless run explicitly)"]
